--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  a(href='/createAccount') Create Account
+  br
+  a(href='/login') Login
