Added preliminary signup page

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  a(href='/createAccount') Create Account
+  a(href='/account/create') Create Account
   br
   a(href='/login') Login
