Added preliminary login page

--- a/views/login.jade
+++ b/views/login.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1=title
-  
+
   form(method='POST' action='')
     div.form-group
       label(for='username') Username: 
@@ -10,7 +10,7 @@ block content
       br
       label(for='password') Password: 
       input#password.form-control(type='text' name='password', required='true')
-    button.btn.btn-primary(type='submit') Submit
+    button.btn.btn-primary(type='submit') Enter
   if errors
     ul
       for error in errors
