--- a/views/signup.jade
+++ b/views/signup.jade
@@ -6,10 +6,10 @@ block content
   form(method='POST' action='')
     div.form-group
       label(for='username') Username: 
-      input#username.form-control(type='text', name='username', required='true')
+      input#username.form-control(type='text', name='username', required='true' value=(undefined===user ? '' : user.username))
       br
       label(for='password') Password: 
-      input#password.form-control(type='text' name='password', required='true')
+      input#password.form-control(type='text' name='password', required='true' value=(undefined===user ? '' : user.password))
     button.btn.btn-primary(type='submit') Submit
   if errors
     ul
