Refacted code to use user instead of account

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
   p Welcome to #{title}
   ul
     li
-      a(href='/account/create') Create Account
+      a(href='/user/create') Create Account
     li
       a(href='/login') Login
     li
