--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,4 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    div
+      a(href="/") Home
+    hr
     block content
