--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -16,12 +16,18 @@ block content
   h1 How do you feel today?
   form(method='POST' action='')
     div
-      input#happy(type='radio', name="mood", value="happy")
-      label(for="happy") Happy
-      input#sad(type='radio', name="mood", value="sad")
-      label(for="sad") Sad
-      input#neutral(type='radio', name="mood", value="neutral")
-      label(for="neutral") Neutral
+      label.mood-form(for="happy") 
+        input#happy(type='radio', name="mood", value="happy")
+        img(src="/images/happyIcon.png")
+        //p Happy
+      label(for="sad")
+        input#sad(type='radio', name="mood", value="sad")
+        img(src="/images/sadIcon.png")
+        //p Sad
+      label(for="neutral")
+        input#neutral(type='radio', name="mood", value="neutral")
+        img(src="/images/neutralIcon.png")
+        //p neutral
     button(type='submit') Submit
 //-    h4 Years
 //    for year in user.years
