--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,16 @@ body {
 a {
   color: #00B7FF;
 }
+
+.header-bar {
+  display: inline-block;
+}
+
+.session-text {
+  float: right;
+}
+
+.session-text p {
+  padding: 0;
+  margin: 0
+}
