Changed mood radio buttons to display borders for selected

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,3 +19,14 @@ a {
   padding: 0;
   margin: 0
 }
+
+.mood-form > input {
+  visibility: hidden;
+  position: absolute;
+}
+
+.mood-form > input:checked + img {
+  border: 2px solid black;
+}
+
+
