--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -20,11 +20,11 @@ block content
         input#happy(type='radio', name="mood", value="happy")
         img(src="/images/happyIcon.png")
         //p Happy
-      label(for="sad")
+      label.mood-form(for="sad")
         input#sad(type='radio', name="mood", value="sad")
         img(src="/images/sadIcon.png")
         //p Sad
-      label(for="neutral")
+      label.mood-form(for="neutral")
         input#neutral(type='radio', name="mood", value="neutral")
         img(src="/images/neutralIcon.png")
         //p neutral
