--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   script(src="https://d3js.org/d3.v4.min.js")
+  script(src="https://cdn.jsdelivr.net/npm/moment@2.21.0/moment.min.js")
   script user = !{JSON.stringify(user)}
   h1=title
 
