Added frustrated, productive, and excited moods

--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -19,15 +19,21 @@ block content
       label.mood-form(for="happy") 
         input#happy(type='radio', name="mood", value="happy")
         img(src="/images/happyIcon.png")
-        //p Happy
       label.mood-form(for="sad")
         input#sad(type='radio', name="mood", value="sad")
         img(src="/images/sadIcon.png")
-        //p Sad
       label.mood-form(for="neutral")
         input#neutral(type='radio', name="mood", value="neutral")
         img(src="/images/neutralIcon.png")
-        //p neutral
+      label.mood-form(for="frustrated") 
+        input#frustrated(type='radio', name="mood", value="frustrated")
+        img(src="/images/frustratedIcon.png")
+      label.mood-form(for="excited")
+        input#excited(type='radio', name="mood", value="excited")
+        img(src="/images/excitedIcon.png")
+      label.mood-form(for="productive")
+        input#productive(type='radio', name="mood", value="productive")
+        img(src="/images/productiveIcon.png")
     button(type='submit') Submit
 //-    h4 Years
 //    for year in user.years
