--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  ul
+  ul.home-options
     li
       a(href='/user/create') Create Account
     li
