Added purecss, changed css of user detail page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,9 @@ a {
 
 .mood-form {
   display: inline-block;  
-  width: 200px;
+  width: 210px;
+  margin: 5px;
+  border: black solid 1px;
 }
 
 .mood-form > input {
@@ -41,6 +43,7 @@ a {
 
 .mood-form > input + div {
   cursor: pointer;
+  padding: 5px;
 }
 
 .mood-form > input:checked + div {
