--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -57,7 +57,7 @@ block content
           svg.mood-block(width=15, height=15)
             rect(width=15, height=15, style="fill:#000000")
           p.mood-label Productive
-    button(type='submit') Submit
+    button.pure-button.pure-button-primary(type='submit') Submit
 //-    h4 Years
 //    for year in user.years
 //    ul 
