--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -19,44 +19,50 @@ block content
         input#happy(type='radio', name="mood", value="happy")
         div
           img(src="/images/happyIcon.png")
-          svg.mood-block(width=15, height=15)
-            rect(width=15, height=15, style="fill:#FFE548")
-          p.mood-label Happy
+          div
+            svg.mood-block(width=15, height=15)
+              rect(width=15, height=15, style="fill:#FFE548")
+            p.mood-label Happy
       label.mood-form(for="sad")
         input#sad(type='radio', name="mood", value="sad")
         div 
           img(src="/images/sadIcon.png")
-          svg.mood-block(width=15, height=15)
-            rect(width=15, height=15, style="fill:#8EB1C7")
-          p.mood-label Sad
+          div
+            svg.mood-block(width=15, height=15)
+              rect(width=15, height=15, style="fill:#8EB1C7")
+            p.mood-label Sad
       label.mood-form(for="neutral")
         input#neutral(type='radio', name="mood", value="neutral")
         div
           img(src="/images/neutralIcon.png")
-          svg.mood-block(width=15, height=15)
-            rect(width=15, height=15, style="fill:#E5F3BB")
-          p.mood-label Neutral
+          div
+            svg.mood-block(width=15, height=15)
+              rect(width=15, height=15, style="fill:#E5F3BB")
+            p.mood-label Neutral
       label.mood-form(for="frustrated") 
         input#frustrated(type='radio', name="mood", value="frustrated")
         div 
           img(src="/images/frustratedIcon.png")
-          svg.mood-block(width=15, height=15)
-            rect(width=15, height=15, style="fill:#DF2935")
-          p.mood-label Frustrated
+          div
+            svg.mood-block(width=15, height=15)
+              rect(width=15, height=15, style="fill:#DF2935")
+            p.mood-label Frustrated
       label.mood-form(for="excited")
         input#excited(type='radio', name="mood", value="excited")
         div
           img(src="/images/excitedIcon.png")
-          svg.mood-block(width=15, height=15)
-            rect(width=15, height=15, style="fill:#AFA2FF")
-          p.mood-label Excited
+          div
+            svg.mood-block(width=15, height=15)
+              rect(width=15, height=15, style="fill:#AFA2FF")
+            p.mood-label Excited
       label.mood-form(for="productive")
         input#productive(type='radio', name="mood", value="productive")
         div
           img(src="/images/productiveIcon.png")
-          svg.mood-block(width=15, height=15)
-            rect(width=15, height=15, style="fill:#000000")
-          p.mood-label Productive
+          div
+            svg.mood-block(width=15, height=15)
+              rect(width=15, height=15, style="fill:#000000")
+            p.mood-label Productive
     button.pure-button.pure-button-primary(type='submit') Submit
 //-    h4 Years
 //    for year in user.years
