--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -19,7 +19,7 @@ block content
         input#happy(type='radio', name="mood", value="happy")
         div
           img(src="/images/happyIcon.png")
-          div
+          div.mood-label-block
             svg.mood-block(width=15, height=15)
               rect(width=15, height=15, style="fill:#FFE548")
             p.mood-label Happy
@@ -27,7 +27,7 @@ block content
         input#sad(type='radio', name="mood", value="sad")
         div 
           img(src="/images/sadIcon.png")
-          div
+          div.mood-label-block
             svg.mood-block(width=15, height=15)
               rect(width=15, height=15, style="fill:#8EB1C7")
             p.mood-label Sad
@@ -35,7 +35,7 @@ block content
         input#neutral(type='radio', name="mood", value="neutral")
         div
           img(src="/images/neutralIcon.png")
-          div
+          div.mood-label-block
             svg.mood-block(width=15, height=15)
               rect(width=15, height=15, style="fill:#E5F3BB")
             p.mood-label Neutral
@@ -43,7 +43,7 @@ block content
         input#frustrated(type='radio', name="mood", value="frustrated")
         div 
           img(src="/images/frustratedIcon.png")
-          div
+          div.mood-label-block
             svg.mood-block(width=15, height=15)
               rect(width=15, height=15, style="fill:#DF2935")
             p.mood-label Frustrated
@@ -51,7 +51,7 @@ block content
         input#excited(type='radio', name="mood", value="excited")
         div
           img(src="/images/excitedIcon.png")
-          div
+          div.mood-label-block
             svg.mood-block(width=15, height=15)
               rect(width=15, height=15, style="fill:#AFA2FF")
             p.mood-label Excited
@@ -59,7 +59,7 @@ block content
         input#productive(type='radio', name="mood", value="productive")
         div
           img(src="/images/productiveIcon.png")
-          div
+          div.mood-label-block
             svg.mood-block(width=15, height=15)
               rect(width=15, height=15, style="fill:#000000")
             p.mood-label Productive
