--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,13 +3,14 @@ html
   head
     title= title
     link(rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous")
+    link(href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     div.header-bar
-      a(href="/") Home
-    if session && session.user
-      div.header-bar.session-text
-        p Logged in as 
-          a(href=session.url) #{session.user}
+      a.header-title(href="/") MoodJournal
+      if session && session.user
+        div.header-bar.session-text
+          p Logged in as 
+            a(href=session.url) #{session.user}
     hr
     block content
