--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,7 +40,21 @@ a {
 
 .session-text p {
   padding: 0;
-  margin: 0
+  margin: 0;
+}
+
+.landing-page {
+  height: 500px;
+  position: relative;
+}
+
+.landing-text {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .heatmap {
