--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  ul.home-options
-    li
-      a(href='/user/create') Create Account
-    li
-      a(href='/login') Login
-    li
-      a(href='/users') List of Users
+  div.landing-page
+    div.landing-text
+      h1= title
+      p Welcome to #{title}
+      ul.home-options
+        li
+          a(href='/user/create') Create Account
+        li
+          a(href='/users') List of Users
