--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,6 @@ html
             a(href="/logout") logout
        else
         div.header-bar.session-text
-          a(href="/login") login
+          a.pure-button(href="/login") login
     hr
     block content
