--- a/views/index.jade
+++ b/views/index.jade
@@ -3,10 +3,6 @@ extends layout
 block content
   div.landing-page
     div.landing-text
-      h1= title
-      p Welcome to #{title}
-      ul.home-options
-        li
-          a(href='/user/create') Create Account
-        li
-          a(href='/users') List of Users
+      span.landing-title= title
+      p Track your mood online
+      a.pure-button(href='/user/create') Create Account
