Updated design of signup form

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -3,14 +3,13 @@ extends layout
 block content
   h1=title
   
-  form(method='POST' action='')
-    div.form-group
+  form.pure-form.pure-form-stacked(method='POST' action='')
+    fieldset
       label(for='username') Username: 
-      input#username.form-control(type='text', name='username', required='true' value=(undefined===user ? '' : user.username))
-      br
+      input#username.form-control(type='text', name='username', required='true' value=(undefined===user ? '' : user.username), placeholder="Username")
       label(for='password') Password: 
-      input#password.form-control(type='text' name='password', required='true' value=(undefined===user ? '' : user.password))
-    button.btn.btn-primary(type='submit') Submit
+      input#password.form-control(type='password' name='password', required='true' value=(undefined===user ? '' : user.password), placeholder="Password")
+    button.pure-button.pure-button-primary(type='submit') Submit
   if errors
     ul
       for error in errors
