Added a script for generating svg with d3

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,6 +51,9 @@ a {
 .landing-page {
   height: 500px;
   position: relative;
+  background-image: url("../images/graphExample.png");
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 
 .landing-text {
