--- a/views/index.jade
+++ b/views/index.jade
@@ -4,5 +4,5 @@ block content
   div.landing-page
     div.landing-text
       span.landing-title= title
-      p Track your mood online
+      p.landing-subtitle Track your mood online
       a.pure-button(href='/user/create') Create Account
