--- a/views/signup.jade
+++ b/views/signup.jade
@@ -1,15 +1,16 @@
 extends layout
 
 block content
-  h1=title
-  
-  form.pure-form.pure-form-stacked(method='POST' action='')
-    fieldset
-      label(for='username') Username: 
-      input#username.form-control(type='text', name='username', required='true' value=(undefined===user ? '' : user.username), placeholder="Username")
-      label(for='password') Password: 
-      input#password.form-control(type='password' name='password', required='true' value=(undefined===user ? '' : user.password), placeholder="Password")
-    button.pure-button.pure-button-primary(type='submit') Submit
+  div.login-form
+    h1=title
+    
+    form.pure-form.pure-form-stacked.center-form(method='POST' action='')
+      fieldset
+        label(for='username') Username 
+        input#username.form-control(type='text', name='username', required='true' value=(undefined===user ? '' : user.username), placeholder="Username")
+        label(for='password') Password 
+        input#password.form-control(type='password' name='password', required='true' value=(undefined===user ? '' : user.password), placeholder="Password")
+      button.pure-button.pure-button-primary(type='submit') Submit
   if errors
     ul
       for error in errors
