--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,6 +85,12 @@ a {
   text-align: center;
 }
 
+.login-errors {
+  list-style: none;
+  text-align: center;
+  padding: 0;
+}
+
 .center-form {
   text-align: left;
   margin: auto;
