--- a/views/signup.jade
+++ b/views/signup.jade
@@ -7,9 +7,9 @@ block content
     form.pure-form.pure-form-stacked.center-form(method='POST' action='')
       fieldset
         label(for='username') Username 
-        input#username.form-control(type='text', name='username', required='true' value=(undefined===user ? '' : user.username), placeholder="Username")
+        input#username.form-control(type='text', name='username', required='true', placeholder="Username")
         label(for='password') Password 
-        input#password.form-control(type='password' name='password', required='true' value=(undefined===user ? '' : user.password), placeholder="Password")
+        input#password.form-control(type='password' name='password', required='true', placeholder="Password")
       button.pure-button.pure-button-primary(type='submit') Submit
   if errors
     ul
