--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -111,6 +111,10 @@ a {
   margin-top: 10px;
 }
 
+.black-border-form input[type]:focus {
+    border: solid black 1px;
+}
+
 .mood-form {
   display: inline-block;  
   margin: 0px 5px 5px 0px;
