--- a/views/signup.jade
+++ b/views/signup.jade
@@ -4,10 +4,10 @@ block content
   div.login-form
     h1=title
     
-    form.pure-form.pure-form-stacked.center-form(method='POST' action='')
+    form.pure-form.pure-form-stacked.center-form.black-border-form(method='POST' action='')
       fieldset
         label(for='username') Username 
-        input#username.form-control(type='text', name='username', required='true', placeholder="Username")
+        input#username.form-control(type='text', name='username', required='true', placeholder="Username", spellcheck='false')
         label(for='password') Password 
         input#password.form-control(type='password' name='password', required='true', placeholder="Password")
       button.pure-button.pure-button-primary(type='submit') Submit
