--- a/views/signup.jade
+++ b/views/signup.jade
@@ -7,9 +7,11 @@ block content
     form.pure-form.pure-form-stacked.center-form.black-border-form(method='POST' action='')
       fieldset
         label(for='username') Username 
-        input#username.form-control(type='text', name='username', required='true', placeholder="Username", spellcheck='false')
+        input#username.form-control(type='text', name='username', required='true', value=(username ? username : ''), placeholder="Username", spellcheck='false')
         label(for='password') Password 
         input#password.form-control(type='password' name='password', required='true', placeholder="Password")
+        label(for'password-again') Password (again)
+        input#password-again.form-control(type='password' name='passwordAgain', required='true', placeholder="Password (again)")
       button.pure-button.pure-button-primary(type='submit') Submit
   if errors
     ul.login-errors
