Changed mood options to be rendered by data
Changed mood to be rendered by data rather than hard coded.
Also fixed some user controller comments
Added use strict options to devstart in npm

--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -9,52 +9,13 @@ block content
   h1 How do you feel today?
   form(method='POST' action='')
     div
-      label.mood-form(for="happy") 
-        input#happy(type='radio', name="mood", value="happy")
-        div
-          img(src="/images/happyIcon.png")
-          div.mood-label-block
-            svg.mood-block(width=15, height=15)
-              rect(width=15, height=15, style="fill:#FFE548")
-            p.mood-label Happy
-      label.mood-form(for="sad")
-        input#sad(type='radio', name="mood", value="sad")
-        div 
-          img(src="/images/sadIcon.png")
-          div.mood-label-block
-            svg.mood-block(width=15, height=15)
-              rect(width=15, height=15, style="fill:#8EB1C7")
-            p.mood-label Sad
-      label.mood-form(for="neutral")
-        input#neutral(type='radio', name="mood", value="neutral")
-        div
-          img(src="/images/neutralIcon.png")
-          div.mood-label-block
-            svg.mood-block(width=15, height=15)
-              rect(width=15, height=15, style="fill:#E5F3BB")
-            p.mood-label Neutral
-      label.mood-form(for="frustrated") 
-        input#frustrated(type='radio', name="mood", value="frustrated")
-        div 
-          img(src="/images/frustratedIcon.png")
-          div.mood-label-block
-            svg.mood-block(width=15, height=15)
-              rect(width=15, height=15, style="fill:#DF2935")
-            p.mood-label Frustrated
-      label.mood-form(for="excited")
-        input#excited(type='radio', name="mood", value="excited")
-        div
-          img(src="/images/excitedIcon.png")
-          div.mood-label-block
-            svg.mood-block(width=15, height=15)
-              rect(width=15, height=15, style="fill:#AFA2FF")
-            p.mood-label Excited
-      label.mood-form(for="productive")
-        input#productive(type='radio', name="mood", value="productive")
-        div
-          img(src="/images/productiveIcon.png")
-          div.mood-label-block
-            svg.mood-block(width=15, height=15)
-              rect(width=15, height=15, style="fill:#000000")
-            p.mood-label Productive
+      for moodOption in options
+        label.mood-form(for= "#{moodOption.mood}")
+          input(id= "#{moodOption.mood}", type='radio', name="mood", value="#{moodOption.mood}")
+          div
+            img(src="#{moodOption.imagePath}")
+            div.mood-label-block
+              svg.mood-block(width=15, height=15)
+                rect(width=15, height=15, style="fill: #{moodOption.color}")
+              p.mood-label #{moodOption.label}
     button.pure-button.pure-button-primary(type='submit') Submit
