--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,10 @@ html
     link(rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous")
     link(href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Nanum+Gothic" rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/index.css')
+    link(rel='stylesheet', href='/stylesheets/login.css')
+    link(rel='stylesheet', href='/stylesheets/user_detail.css')
+
   body
     div.header-bar
       a.header-title(href="/")
