Updated prompt to reflect selected date

--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -7,7 +7,7 @@ block content
 
   hr
 
-  h1 How do you feel today?
+  h1(id="mood-prompt") How do you feel today?
   form(method='POST' action='')
     div
       input(id="form-date" name="date" type="hidden" value="#{new Date()}")
