Cleaned up date setting code

--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -23,4 +23,6 @@ block content
     button.pure-button.pure-button-primary(type='submit') Submit
 
     script.
+      curDate = getUTCDate(curDate)
+      console.log(curDate.toUTCString());
       document.getElementById('form-date').value=curDate
