Added note-field to user form

--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -20,9 +20,11 @@ block content
               svg.mood-block(width=15, height=15)
                 rect(width=15, height=15, style="fill: #{moodOption.color}")
               p.mood-label #{moodOption.label}
+       label.note-field(for="note-field") Notes: 
+        input(id="note-field" name="note" type="text")
     button.pure-button.pure-button-primary(type='submit') Submit
 
-    script.
-      curDate = getUTCDate(curDate)
-      console.log(curDate.toUTCString());
-      document.getElementById('form-date').value=curDate
+  script.
+    curDate = getUTCDate(curDate)
+    console.log(curDate.toUTCString());
+    document.getElementById('form-date').value=curDate
