--- a/views/partials/mood_graph.jade
+++ b/views/partials/mood_graph.jade
@@ -1,6 +1,7 @@
 .graph
   script(src="https://d3js.org/d3.v4.min.js")
   script(src="https://cdn.jsdelivr.net/npm/moment@2.21.0/moment.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js")
   script user = !{JSON.stringify(user)}
 
   div.heatmap
