Moved graph creation to func

--- a/views/user_detail.jade
+++ b/views/user_detail.jade
@@ -25,6 +25,7 @@ block content
     button.pure-button.pure-button-primary(type='submit') Submit
 
   script.
+    createGraph()
     curDate = getUTCDate(curDate)
     console.log(curDate.toUTCString())
     updateNotes(curDate)
