removed hardcoded colour mapping, added function to get graph rects

--- a/views/partials/mood_graph.jade
+++ b/views/partials/mood_graph.jade
@@ -3,6 +3,8 @@
   script(src="https://cdn.jsdelivr.net/npm/moment@2.21.0/moment.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js")
   script user = !{JSON.stringify(user)}
+  script options = !{JSON.stringify(options)}
+
   script(src="/javascripts/utils.js")
 
   div.heatmap
