--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,8 @@ html
         div.header-bar.session-text
           p Logged in as 
             a(href=session.url) #{session.user}
+            span  |
+            a(href="/settings") settings
             span  | 
             a(href="/logout") logout
        else
